# CourseWorkHypermarket

./: .gitignore  CMakeLists.txt  Customer.cpp  CustomerHandler.h  Laptop.h  Makefile  MobilePhone.cpp  MobilePhone.h  Product.cpp  Product.h  README.md  RegularCustomer.cpp  Requirements.txt  Smartphone.cpp  Utilities.h  main.cpp
GUIproject/.CourseWorkDb/: passwords.txt
GUIproject/CourseWorkDb/: Laptops.txt  MobilePhones.txt  Smartphones.txt  money.txt  passwords.txt  products.txt  test.txt
GUIproject/CourseWorkDbBackUp/: Laptops.txt  MobilePhones.txt  money.txt  passwords.txt  products.txt
GUIproject/CourseWorkHypermarket/: CourseWorkHypermarket.pro  customer.cpp  customer.h  customereditproducts.cpp  customereditproducts.h  customereditproducts.ui  customerlist.cpp  customerlist.h  customerwindow.cpp  customerwindow.h  customerwindow.ui  laptop.cpp  laptop.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mobilephone.cpp  mobilephone.h  ownereditcustomersinfo.cpp  ownereditcustomersinfo.h  ownereditcustomersinfo.ui  ownereditproduts.cpp  ownereditproduts.h  ownereditproduts.ui  ownerwindow.cpp  ownerwindow.h  ownerwindow.ui  product.cpp  product.h  productlist.cpp  productlist.h  registerform.cpp  registerform.h  registerform.ui  regularcustomer.cpp  regularcustomer.h  (+7 more)
GUIproject/build-CourseWorkHypermarket-Desktop-Debug/: CourseWorkHypermarket  (+15 more)
include/: HypermarketHandler.h  Smartphone.h
src/: HypermarketHandler.cpp  Laptop.cpp  Makefile  OwnerHandler.h  RegularCustomer.h  Utilities.cpp  main.cpp
(+32 files in other folders)
